<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/EditTextUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.206"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/EditTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditTextUsername"
        app:layout_constraintVertical_bias="0.11"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/LoginButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:text="@string/login"
        android:onClick="login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditTextPassword"
        app:layout_constraintVertical_bias="0.156" />

    <Button
        android:id="@+id/RegisterButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:onClick="register"
        android:text="@string/registation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AnonymButton"
        app:layout_constraintVertical_bias="0.105" />

    <Button
        android:id="@+id/AnonymButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:onClick="anonym_login"
        android:text="@string/anonym_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LoginButton"
        app:layout_constraintVertical_bias="0.073" />
</androidx.constraintlayout.widget.ConstraintLayout>