<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/registationTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/registation"
        android:textSize="24sp"
        android:layout_alignParentStart="true"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:layout_alignParentLeft="true" />
    <EditText
        android:id="@+id/userNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_alignParentLeft="true"
        android:inputType="textPersonName"
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_marginRight="@dimen/default_margin"
        android:hint="@string/user_name"
        android:layout_below="@id/registationTextView"
        android:layout_alignParentStart="true" />
    <EditText
        android:id="@+id/userEmailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_marginRight="@dimen/default_margin"
        android:layout_alignParentLeft="true"
        android:inputType="textEmailAddress"
        android:hint="@string/email_address"
        android:layout_below="@id/userNameEditText"
        android:layout_alignParentStart="true" />
    <EditText
        android:id="@+id/userPasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_alignParentLeft="true"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_marginRight="@dimen/default_margin"
        android:layout_below="@id/userEmailEditText"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/userPasswordAgainEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/userPasswordEditText"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_marginRight="@dimen/default_margin"
        android:layout_marginTop="@dimen/default_margin"
        android:hint="@string/password_again"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/phoneEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/userPasswordAgainEditText"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_marginRight="@dimen/default_margin"
        android:layout_marginTop="@dimen/default_margin"
        android:hint="@string/phone_number"
        android:inputType="phone" />

    <EditText
        android:id="@+id/addressEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/phoneEditText"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_marginRight="@dimen/default_margin"
        android:layout_marginTop="@dimen/default_margin"
        android:hint="@string/address"
        android:maxLines="3"
        android:inputType="textPostalAddress|textMultiLine" />

        <RadioGroup
            android:id="@+id/accountTypeGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/addressEditText"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginRight="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin">
            <RadioButton
                android:id="@+id/buyerRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/buyer"
                />
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/seller"
                />
        </RadioGroup>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/accountTypeGroup"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_centerHorizontal="true">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registation"
            android:onClick="register"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:text="@string/cancel"
            android:layout_marginLeft="40dp"
            android:onClick="cancel"/>
    </LinearLayout>
</RelativeLayout>